--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.15.0",
     "grommet": "^2.22.0",
     "grommet-icons": "^4.8.0",
+    "nanoid": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,7 +18,8 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.0",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.17.4"
   },
   "scripts": {
     "start": "react-scripts start",
